product_docs/docs/jdbc_connector/42.2.12.3/05_using_the_advanced_server_jdbc_connector_with_java_applications/02_connecting_to_the_database/01_additional_connection_properties.mdx
---
title: "Additional Connection Properties"

legacyRedirectsGenerated:
  # This list is generated by a script. If you need add entries, use the `legacyRedirects` key.
  - "/edb-docs/d/jdbc-connector/user-guides/jdbc-guide/42.2.12.3/additional_connection_properties.html"
  - "/edb-docs/d/jdbc-connector/user-guides/jdbc-guide/42.2.12.1/additional_connection_properties.html"
---

<div id="additional_connection_properties" class="registered_link"></div>

In addition to the standard connection parameters, the Advanced Server JDBC driver supports connection properties that control behavior specific to `EDB`. You can specify these properties in the connection URL or as a `Properties` object parameter passed to `DriverManager.getConnection()`. Listing 1.2 demonstrates how to use a `Properties` object to specify additional connection properties:

Listing 1.2

```text
String url = "jdbc:edb://localhost/edb";
Properties props = new Properties();

props.setProperty("user", "enterprisedb");
props.setProperty("password", "enterprisedb");
props.setProperty("sslfactory", "com.edb.ssl.NonValidatingFactory");
props.setProperty("ssl", "true");

Connection con = DriverManager.getConnection(url, props);
```

!!! Note
    By default the combination of `SSL=true` and setting the connection URL parameter `sslfactory=org.postgresql.ssl.NonValidatingFactory` encrypts the connection but does not validate the SSL certificate. To enforce certificate validation, you must use a `Custom SSLSocketFactory`. For more details about writing a `Custom SSLSocketFactory`, review [the PostgreSQL JDBC driver documentation](https://jdbc.postgresql.org/documentation/head/ssl-factory.html).

To specify additional connection properties in the URL, add a question mark and an ampersand-separated list of keyword-value pairs:

`String url = "jdbc:edb://localhost/edb?user=enterprisedb&ssl=true";`

Some of the additional connection properties are shown in the following table:

Table 5-2 - Additional Connection Properties

| Name                  | Type    | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| --------------------- | ------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| user                  | String  | The database user on whose behalf the connection is being made.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| password              | String  | The database user’s password.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| ssl                   | Boolean | Requests an authenticated, encrypted SSL connection                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| loggerLevel           | String  | The logger level of the driver. The allowed values are OFF, DEBUG or TRACE. This enables the java.util.logging.Logger Level of the driver based on the following mapping of levels: DEBUG -> FINE, TRACE -> FINEST. The loggerLevel property is intended for debugging the driver, and not for general SQL query debugging.                                                                                                                                                                                                                                                      |
| loggerFile            | String  | The file name output of the logger. This parameter must be used together with loggerLevel. If set, the Logger uses a java.util.logging.FileHandler to write to a specified file. If the parameter is not set or the file can’t be created, the java.util.logging.ConsoleHandler is used instead of java.util.logging.FileHandler.                                                                                                                                                                                                                                                |
| charSet               | String  | The value of charSet determines the character set used for data sent to or received from the database.                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| prepareThreshold      | Integer | The value of prepareThreshold determines the number of PreparedStatement executions required before switching to server side prepared statements. The default is five.                                                                                                                                                                                                                                                                                                                                                                                                           |
| loadBalanceHosts      | Boolean | In default mode (disabled) hosts are connected in the given order. If enabled, hosts are chosen randomly from the set of suitable candidates.                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| targetServerType      | String  | Allows opening connections to only servers with the required state. The allowed values are any, primary, secondary, preferSecondary, and preferSyncSecondary. The primary/secondary distinction is currently done by observing if the server allows writes. The value preferSecondary tries to connect to secondaries if any are available, otherwise allows connecting to the primary. The Advanced Server JDBC Connector supports preferSyncSecondary, which permits connection to only synchronous secondaries or the primary if there are no active synchronous secondaries. |
| skipQuotesOnReturning | Boolean | When set to true, column names from the RETURNING clause are not quoted. This eliminates a case-sensitive comparison of the column name. When set to false (the default setting), column names are quoted.                                                                                                                                                                                                                                                                                                                                                                       |
